<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button android:id="@+id/btnShowCurrent"
            android:text="@string/show_current"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button android:id="@+id/btnShowDaily"
            android:text="@string/show_daily"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnShowCurrent"/>

    <Button android:id="@+id/btnShowHourly"
            android:text="@string/show_hourly"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnShowDaily"/>

    <Button android:id="@+id/btnShowMinutely"
            android:text="@string/show_minutely"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnShowHourly"/>

    <Button android:id="@+id/btnMainUpdateWeatherData"
            android:text="@string/update_weather_data"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtMainLastUpdated"/>

    <TextView android:id="@+id/txtMainLastUpdated"
              android:text="@string/update_weather_data"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_margin="10dp"
              app:layout_constraintLeft_toLeftOf="@id/btnMainUpdateWeatherData" app:layout_constraintRight_toRightOf="@id/btnMainUpdateWeatherData"
              app:layout_constraintBottom_toTopOf="@id/edittxtMainLocation"/>

    <EditText android:id="@+id/edittxtMainLocation"
              android:inputType="text"
              android:hint="@string/location"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:layout_marginBottom="10dp"
              android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
              app:layout_constraintLeft_toRightOf="parent" app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBottom_toTopOf="@+id/btnMainUpdateLocation"/>

    <Button android:id="@+id/btnMainUpdateLocation"
            android:text="@string/update_location"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtMainLocation"/>

    <TextView android:id="@+id/txtMainLocation"
              android:text="@string/update_location"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_margin="10dp"
              app:layout_constraintLeft_toLeftOf="@id/btnMainUpdateLocation" app:layout_constraintRight_toRightOf="@id/btnMainUpdateLocation"
              app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>